@@ -1424,6 +1424,13 @@ operator|.
 name|listFiles
 argument_list|()
 decl_stmt|;
+if|if
+condition|(
+name|files
+operator|!=
+literal|null
+condition|)
+block|{
 for|for
 control|(
 name|int
@@ -1456,6 +1463,7 @@ block|{
 return|return
 literal|false
 return|;
+block|}
 block|}
 block|}
 block|}
